--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,13 @@ jobs:
             experimental-features = nix-command flakes
       - uses: cachix/cachix-action@v10
         with:
-          name: nix-community
+          name: nix-workshop
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - name: parse
         run: nix-instantiate --json --parse ./**/*.nix
       - name: flake-check
         run: |
+          cachix watch-exec nix-workshop -- \
           nix flake check -L
   build-shell:
     runs-on: ${{ matrix.system }}
@@ -43,11 +45,14 @@ jobs:
             experimental-features = nix-command flakes
       - uses: cachix/cachix-action@v10
         with:
-          name: nix-community
+          name: nix-workshop
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - name: build-shell
         run: |
           SYSTEM="$(nix eval --impure --expr 'builtins.currentSystem')"
-          nix build -L .\#devShells."$SYSTEM".default.inputDerivation
+          cachix watch-exec nix-workshop -- \
+          nix build -L --keep-going \
+            .\#devShells."$SYSTEM".default.inputDerivation
   build-packages:
     runs-on: ${{ matrix.system }}
     strategy:
@@ -64,10 +69,12 @@ jobs:
             experimental-features = nix-command flakes
       - uses: cachix/cachix-action@v10
         with:
-          name: nix-community
+          name: nix-workshop
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - name: build-packages
         run: |
           SYSTEM="$(nix eval --impure --expr 'builtins.currentSystem')"
-          nix build -L \
+          cachix watch-exec nix-workshop -- \
+          nix build -L --keep-going \
             .\#packages."$SYSTEM".default \
             .\#packages."$SYSTEM".docker-image
