--- a/hello-apl/Makefile
+++ b/hello-apl/Makefile
@@ -1,12 +1,12 @@
 SRCFILE=hello.apl
-OUTFILE=hello-apl
+BINFILE=hello-apl
+PREFIX ?= ./install
 
 .PHONY: clean
 clean:
-	rm -rf $(OUTDIR)
 	rm -rf $(DESTDIR)$(PREFIX)
 
 .PHONY: install
 install:
 	mkdir -p $(DESTDIR)$(PREFIX)/bin/
-	install -m 755 $(SRCFILE) $(DESTDIR)$(PREFIX)/bin/$(OUTFILE)
+	install -m 755 $(SRCFILE) $(DESTDIR)$(PREFIX)/bin/$(BINFILE)
